# with-claude-code

./: .gitignore  CLAUDE.md  CODESPACES_EXPLANATION.md  DEVELOPMENT_GUIDE.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.production  Dockerfile.production  LOCAL_SETUP.md  README.md  docker-compose.local.yml  docker-compose.yml  railway.frontend.json  railway.json  railway.toml  setup-dev.sh
.github/workflows/: deploy.yml
backend/: init_db.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  home.py  ideas.py  requirements.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/crud/: __init__.py  crud_home.py  crud_idea.py  crud_requirement.py  crud_user.py
backend/app/models/: __init__.py  home.py  idea.py  user.py
backend/app/schemas/: __init__.py  auth.py  home.py  idea.py  requirement.py  user.py
backend/app/services/: __init__.py  llm_service.py
frontend/: next.config.js  package-lock.json  package.json  railway.json  railway.toml  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/ideas/: page.tsx
frontend/src/app/ideas/[id]/: page.tsx
frontend/src/app/ideas/[id]/edit/: page.tsx
frontend/src/app/ideas/new/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: axios.ts
frontend/src/stores/: authStore.ts
